26332 - Replace react dropdown with react nav to rebuild the menu which can respond properly to screen resize - Override nav related csses to ensure good color contrast - Rename Nav component to DinaNav as react nav also use

--- a/packages/dina-ui/components/button-bar/nav/nav.css
+++ b/packages/dina-ui/components/button-bar/nav/nav.css
@@ -8,13 +8,24 @@ body {
   display: block;
   margin-top: -5px;
 }
-.dropdown .nav-link {
-  color: rgb(232, 230, 227);
-  border-width: 0px;
-}
-.dropdown:hover .nav-link {
-  background-color: #38414d;
-}
+
 .ftr-urlt-lnk li {
   float: initial !important;
+}
+
+/* Ensure the react bootstrap Nav related classes having good contrast */
+a.nav-link.dropdown-toggle,
+a.nav-link.dropdown-toggle:focus,
+.navbar-light .navbar-brand,
+.navbar-light .navbar-brand:hover,
+.navbar-light .navbar-brand:focus,
+.navbar-light .navbar-nav .nav-link,
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .show > .nav-link {
+  color: #e0e0e0;
+}
+button.navbar-toggler {
+  background-color: #e0e0e0;
 }
